<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_pop_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/half_transparent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tv_cation_cancel"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/slt_as_ios7_other_bt_single"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/title_bg_blue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_cation_delete"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_above="@id/tv_cation_cancel"
        android:layout_marginBottom="10dp"
        android:background="@drawable/slt_as_ios7_other_bt_bottom"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/title_bg_blue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_cation_rename"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_above="@id/tv_cation_delete"
        android:background="@drawable/slt_as_ios7_other_bt_top"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/rename"
        android:textColor="@color/title_bg_blue"
        android:textSize="18sp" />

</RelativeLayout>